<resources>
    <string name="app_name">AisDiary</string>
    <string name="app_ok">OK</string>
    <string name="app_cancel">Cancel</string>

    <string name="home_activity_title">Schedules</string>
    <string name="about_ais_activity_title">About</string>
    <string name="new_event_activity_title">New event</string>
    <string name="edit_event_activity_title">Edit event</string>
    <string name="new_task_activity_title">New task</string>
    <string name="edit_task_activity_title">Edit task</string>
    <string name="diary_activity_title">Diary</string>
    <string name="mailto_contact_ais">enquiry@ais.ac.nz</string>
    <string name="mailto_title">Contact AIS</string>
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>

    <string name="action_about_ais">About AIS</string>
    <string name="action_schedule">Schedule</string>
    <string name="action_diary">Diary</string>
    <string name="action_contact_us">Contact Us</string>
    <string name="action_done">Done</string>
    <string name="action_delete">Delete</string>
    <string name="action_campus">Campus</string>
    <string name="action_transport">Transport</string>
    <string name="action_event">Event</string>
    <string name="action_task">Task</string>

    <string name="home_schedule_title">To event</string>
    <string name="home_schedule_to_event_msg">Do you want to add this schedule to my event?</string>
    <string name="home_new_schedule_success">Schedule successfully added to my event.</string>
    <string name="home_new_schedule_confirm">View</string>

    <string name="contact_ais_number_type_phone">Phone</string>
    <string name="contact_ais_number_type_fax">Fax</string>

    <string name="diary_event_title">Event</string>
    <string name="diary_task_title">Task</string>

    <string name="empty_event">No events</string>
    <string name="newevent_title_hint">Title</string>
    <string name="newevent_location_hint">Location (optional)</string>
    <string name="newevent_description_hint">Description (optional)</string>

    <string name="empty_task">No tasks</string>
    <string name="new_task_content_hint">New task</string>

    <string name="about_ais_tab_name">AIS</string>
    <string name="about_programmes_tab_name">Programmes</string>
    <string name="about_lecturers_tab_name">Lecturers</string>
    <string name="empty_lecturers">No lecturers</string>
    <string name="about_lecturer_search_input_hint">Search</string>

    <string name="msg_doesnt_support_mail_service">This device doesn\'t support email service. Please install email support application.</string>
    <string name="msg_invalid_event_data">Invalid event data.</string>
    <string name="msg_event_successfully_deleted">Event successfully deleted.</string>
    <string name="msg_event_successfully_edited">Event successfully edited.</string>
    <string name="msg_invalid_task_data">Invalid task data.</string>
    <string name="msg_task_successfully_deleted">Task successfully deleted.</string>
    <string name="msg_task_successfully_edited">Task successfully edited.</string>
    <string name="msg_invalid_arguments">Invalid arguments</string>

</resources>
