<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    android:divider="@drawable/divider_horizontal">

    <ImageView
        android:id="@+id/titleIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_title"
        android:scaleType="center"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/titleView"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:ems="10"
        android:hint="@string/newevent_title_hint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/titleIcon"
        app:layout_constraintRight_toRightOf="parent"
        />

    <View
        android:id="@+id/titleLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/divider"
        app:layout_constraintTop_toBottomOf="@id/titleView"
        />

    <ImageView
        android:id="@+id/timeIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_timelapse"
        android:scaleType="center"
        app:layout_constraintTop_toBottomOf="@id/titleLine"
        />

    <LinearLayout
        android:id="@+id/timeContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toRightOf="@id/timeIcon"
        app:layout_constraintTop_toBottomOf="@id/titleLine"
        app:layout_constraintRight_toRightOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">
            <TextView
                android:id="@+id/startView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Starts"
                />
            <LinearLayout
                android:id="@+id/startDateTimeContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                android:layout_below="@id/startView">
                <TextView
                    android:id="@+id/startDateView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:gravity="center_vertical"
                    android:text="Oct 10 2018, Thur"
                    android:textSize="16sp"
                    android:ems="10"/>

                <TextView
                    android:id="@+id/startTimeView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:text="10:10 AM"
                    android:textSize="16sp"
                    android:gravity="right|end|center_vertical"
                    android:ems="10"/>
            </LinearLayout>

            <TextView
                android:id="@+id/endView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_below="@id/startDateTimeContainer"
                android:text="Ends"
                />
            <LinearLayout
                android:id="@+id/endDateTimeContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                android:layout_below="@id/endView">
                <TextView
                    android:id="@+id/endDateView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:gravity="center_vertical"
                    android:text="Oct 10 2018, Thur"
                    android:textSize="16sp"
                    android:ems="10"/>

                <TextView
                    android:id="@+id/endTimeView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:text="10:10 AM"
                    android:textSize="16sp"
                    android:gravity="right|end|center_vertical"
                    android:ems="10"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <View
        android:id="@+id/timeLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/divider"
        app:layout_constraintTop_toBottomOf="@id/timeContainer"
        />

    <ImageView
        android:id="@+id/locationIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_location"
        android:scaleType="center"
        app:layout_constraintTop_toBottomOf="@id/timeLine"
        />

    <EditText
        android:id="@+id/locationView"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:ems="10"
        android:hint="@string/newevent_location_hint"
        app:layout_constraintTop_toBottomOf="@id/timeLine"
        app:layout_constraintLeft_toRightOf="@id/locationIcon"
        app:layout_constraintRight_toRightOf="parent"
        />

    <View
        android:id="@+id/locationLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/divider"
        app:layout_constraintTop_toBottomOf="@id/locationView"
        />

    <ImageView
        android:id="@+id/descriptionIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_title"
        android:scaleType="center"
        app:layout_constraintTop_toBottomOf="@id/locationLine"
        />

    <EditText
        android:id="@+id/descriptionView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/newevent_description_hint"
        app:layout_constraintTop_toBottomOf="@id/locationLine"
        app:layout_constraintLeft_toRightOf="@id/locationIcon"
        app:layout_constraintRight_toRightOf="parent"
        />


</android.support.constraint.ConstraintLayout>